<resources>
    <string name="app_name">ORC</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>




    //Auth
    <string name="username_hint_label">Username</string>
    <string name="password_hint_label">Password</string>
    <string name="login_button_label">Login</string>
    <string name="signup_text_listner">Don\'t have an account? SignUp!</string>
    <string name="email_hint_label">email@example.com</string>
    <string name="signup_button_label">SignUp</string>
    <string name="login_text_listner">Already have an account, Log in</string>
    <string name="logout_label">Logout</string>
    <string name="cancel_label">Cancel</string>

    <string name="signup_error_title">Oops!</string>
    <string name="signup_error_message">Please make sure you enter a username,password and email address</string>


    <string name="login_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password</string>





</resources>
