<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.sunnitableegijamaat.orc.SignUpActivity">

    <LinearLayout
        android:id="@+id/signUpItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/usernameEditTextSignup"
            android:inputType="textPersonName"
            android:hint="@string/username_hint_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <requestFocus/>
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="30"
            android:id="@+id/emailEditTextSignup"
            android:hint="@string/email_hint_label" />

        <EditText
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditTextSignup"
            android:hint="@string/password_hint_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:layout_below="@+id/signUpItems">

        <Button
            android:text="@string/signup_button_label"
            android:id="@+id/signupButton"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/cancel_label"
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </LinearLayout>

</RelativeLayout>
