<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.sunnitableegijamaat.orc.LoginActivity">

    <LinearLayout
        android:id="@+id/loginItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/usernameEditTextLogin"
            android:inputType="textPersonName"
            android:hint="@string/username_hint_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <requestFocus/>
        </EditText>

        <EditText
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditTextLogin"
            android:hint="@string/password_hint_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:text="@string/login_button_label"
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginItems"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text_listner"
        android:id="@+id/signUpTextListner"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:layout_below="@+id/loginButton"
        android:layout_margin="16dp"/>


</RelativeLayout>
